WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36511
Safari freezes when using SPUTNIK JavaScript Conformance Check
https://bugs.webkit.org/show_bug.cgi?id=36511
Summary
Safari freezes when using SPUTNIK JavaScript Conformance Check
Alexey Proskuryakov
Reported
2010-03-23 15:19:00 PDT
Freezes at Test 3746 (S15.4.4.12_A3_T3). <
rdar://problem/7753498
>
Attachments
proposed fix
(7.85 KB, patch)
2010-03-23 15:23 PDT
,
Alexey Proskuryakov
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2010-03-23 15:23:23 PDT
Created
attachment 51462
[details]
proposed fix
Geoffrey Garen
Comment 2
2010-03-23 15:48:57 PDT
Comment on
attachment 51462
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 3
2010-03-23 16:12:36 PDT
Committed <
http://trac.webkit.org/changeset/56425
>.
Alexey Proskuryakov
Comment 4
2010-03-23 16:31:58 PDT
Build fix
r56427
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug