        Reviewed by Geoff Garen.

https://bugs.webkit.org/show_bug.cgi?id=36511
        <rdar://problem/7753498> Safari freezes when using SPUTNIK JavaScript conformance check

        Test: fast/js/sputnik-S15.4.4.12_A3_T3.html

        * runtime/ArrayPrototype.cpp: (JSC::arrayProtoFuncSplice): We were incorrectly computing
        the start offset, and iterated over (almost) all integers. Note that this can be fixed
        without using doubles, but the code would be much more complicated, and there is no important
        reason to stick to integers here.



Canonical link: https://commits.webkit.org/47719@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56425 268f45cc-cd09-0410-ab3c-d52691b4dbfc